@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Sun Jun 12 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.1-1
+* Tue Jun 14 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.1-1
 - 2.1.1 release, see /usr/share/doc/l2tpns-2.1.1/Changes
