@@ -1,4 +1,4 @@
-* Sun Jun 12 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.1
+* Tue Jun 14 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.1
 - Add missing newline to backtrace macro.
 - Don't send CDN for each session when shutting down tunnels (this is
   implicit).
@@ -6,6 +6,8 @@
   still_busy().  Reject new tunnels/sessions while in the process of
   shutting down.
 - Clarify usage of shutdown signals in documentation.
+- Always initialise PRNG.
+- Sanity check length of random_vector.
 
 * Sun Jun 5 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.0
 - Add IPv6 support from Jonathan McDowell.
